--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - flask
 
   flask:
-    # image: "alabovss/flask:1.0"
+    # image: "aquaman/flask:1.0"
     build: .
     container_name: flask
     environment:
@@ -30,7 +30,7 @@ services:
       postgres:
         condition: service_healthy
 
-  postgres:
+  postgres: 
     image: "postgres:16.1-alpine"
     container_name: postgres
     environment:
@@ -48,4 +48,4 @@ services:
       retries: 5
 
 volumes:
-  postgres_data:
+  postgres_data: 
